# TIL

./: .gitignore  README.md
Algorithm/: .gitignore  README.md  pyproject.toml
Algorithm/Assignments/1st/: 1-1.py  1-2.py
Algorithm/Assignments/2nd/: 2-1.py  2-2.py
Algorithm/Assignments/3rd/: 3-1.py  3-2.py
Algorithm/Assignments/4th/: 4-1.py  4-2.py
Algorithm/Assignments/5th/: 5-1.py  5-2.py
Algorithm/Notes/: 2023-03-11 Bubble Sort.md  2023-03-11 Insertion Sort.md  2023-03-11 Quick Sort.md  2023-03-11 Selection Sort.md  2023-03-20 HeapSort.md  2023-03-20 MergeSort.md  2023-03-20 QuickSort.md  2025-02-07 Time Complexity.md  2025-02-27 Graph.md  2025-02-27 Time Complexity.md  2025-02-28 Linked List.md  2025-03-01 Stack.md  2025-03-02 HashTable.md  2025-03-02 Heap.md  2025-03-02 Queue.md  2025-03-02 Tree.md  2025-03-06 DFS & BFS.md  2025-03-06 DFS.md  2025-03-06 Graph 2.md  2025-03-10 BackTracking.md  2025-03-10 Binary Search.md  Dijkstra.md
Algorithm/QuestionNSolve/: Binary Search.py  Count islands by BFS.py  Count islands by DFS.py  Count islands.py  DFS N BFS.py  Get In Line.py  InsertionSort.py  N Queens.py  Palindrome Linked List.py  Useful Parentheses.py
Algorithm/structures/: BFS.py  BubbleSort.py  DFS.py  HashTable.py  HeapSort.py  LinkedList.py  MaxHeap.py  MergeSort.py  Queue.py  QuickSort.py  SelectionSort.py  Stack.py  dijkstra.py  dijkstra_testcase.txt
Backends/Queue_system/: README.md  pyproject.toml
Backends/Queue_system/using_polling/: main.py  queue_manager.py
Backends/Queue_system/using_websoket/: main.py  queue_manager.py
Backends/RateLimiting/: README.md  pyproject.toml
Backends/RateLimiting/rate_limiters/: __init__.py  fixed_window.py  no_limit.py  sliding_window.py  token_bucket.py
Backends/RateLimiting/tests/: test_burst_traffic.py  test_comparison.py  test_fixed_window.py  test_fixed_window_burst.py  test_real_boundary.py  test_sliding_window.py  test_token_bucket.py  test_total_comparison.py  test_window_boundary.py
Backends/circuitBreaker/: README.md  in_real_world.py  library_recommend.py  pyproject.toml  simple_circuit_breaker.py
Django/Airbnb/: .env  .gitignore  README.md  db.sqlite3  pyproject.toml
Django/Airbnb/bookings/: models.py  serializers.py
Django/Airbnb/categories/: serializers.py  views.py
Django/Airbnb/config/: authentication.py  settings.py  urls.py
Django/Airbnb/direct_messages/: models.py
Django/Airbnb/experiences/: models.py  serializers.py  urls.py  views.py
Django/Airbnb/houses/: admin.py  models.py
Django/Airbnb/reviews/: admin.py
Django/Airbnb/rooms/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
Django/Airbnb/rooms/templates/: all_rooms.html
Django/Airbnb/src/: db.sqlite3
Django/Airbnb/src/bookings/: admin.py  models.py  serializers.py
Django/Airbnb/src/categories/: admin.py  models.py  serializers.py  urls.py  views.py
Django/Airbnb/src/common/: models.py
Django/Airbnb/src/config/: authentications.py  settings.py  urls.py
Django/Airbnb/src/direct_messages/: admin.py  models.py
Django/Airbnb/src/experiences/: admin.py  models.py  serializers.py  urls.py  views.py
Django/Airbnb/src/houses/: admin.py  models.py
Django/Airbnb/src/houses/migrations/: 0001_initial.py  0002_house_pets_allowed.py  0003_rename_price_house_price_per_night.py
Django/Airbnb/src/medias/: admin.py  models.py  urls.py  views.py
Django/Airbnb/src/reviews/: admin.py  models.py  serializers.py
Django/Airbnb/src/rooms/: admin.py  models.py  serializers.py  urls.py  views.py
Django/Airbnb/src/rooms/templates/: all_rooms.html  room_detail.html
Django/Airbnb/src/users/: admin.py  models.py  serializers.py  urls.py  views.py
Django/Airbnb/src/users/migrations/: 0001_initial.py
Django/Airbnb/src/wishlists/: admin.py  models.py  serializers.py  urls.py  views.py
Django/Airbnb/users/: admin.py  models.py  urls.py  views.py
Django/Airbnb/wishlists/: views.py
Django/Sns/: .gitignore  README.md  celery_app.py  docker-compose.yml  pyproject.toml
Django/Sns/comments/: admin.py  models.py  serializers.py
Django/Sns/config/: settings.py  urls.py
Django/Sns/likes/: models.py
Django/Sns/newsfeeds/: urls.py  views.py
Django/Sns/posts/: admin.py  models.py  permission.py  serializers.py  signals.py  urls.py  views.py
Django/Sns/search/: es_client.py
Django/Sns/users/: admin.py  models.py  permission.py  serializers.py  urls.py  views.py
Django/Sns/utils/: redis.py
FastAPI/ToDo_mini_Project/: .gitignore  README.md  ToDo.sql  connect_redis.md  main.py  pyproject.toml  user.sql
FastAPI/ToDo_mini_Project/src/: cache.py  main.py  security.py
FastAPI/ToDo_mini_Project/src/api/: todo.py  user.py
FastAPI/ToDo_mini_Project/src/database/: connection.py  orm.py  repository.py
FastAPI/ToDo_mini_Project/src/schema/: request.py  response.py
FastAPI/ToDo_mini_Project/src/service/: user.py
FastAPI/ToDo_mini_Project/src/tests/: test_main.py  test_todos_api.py  test_users_api.py
Web_Frameworks/Django/Airbnb/: .env  db.sqlite3  pyproject.toml
Web_Frameworks/Django/Airbnb/bookings/: serializers.py
Web_Frameworks/Django/Airbnb/categories/: serializers.py  views.py
Web_Frameworks/Django/Airbnb/config/: urls.py
Web_Frameworks/Django/Airbnb/experiences/: admin.py  serializers.py  urls.py  views.py
Web_Frameworks/Django/Airbnb/medias/: views.py
Web_Frameworks/Django/Airbnb/rooms/: serializers.py  tests.py  urls.py  views.py
Web_Frameworks/Django/Airbnb/rooms/templates/: all_rooms.html
Web_Frameworks/Django/Airbnb/users/: urls.py  views.py
Web_Frameworks/Django/Airbnb/wishlists/: serializers.py  urls.py  views.py
Web_Frameworks/FastAPI/clean-architecture/: .gitignore  alembic.ini  config.py  containers.py  database.py  main.py  pyproject.toml
Web_Frameworks/FastAPI/clean-architecture/common/: auth.py  messaging.py
Web_Frameworks/FastAPI/clean-architecture/example/: celery_result.py  deserialize_result.py
Web_Frameworks/FastAPI/clean-architecture/note/application/: note_service.py
Web_Frameworks/FastAPI/clean-architecture/utils/: crypto.py
(+110 files in other folders)
