[project]
name = "todo-fastapi"
version = "0.1.0"
description = "ToDo Project from InfLearn"
authors = [
    {name = "kikiru328",email = "kikiru328@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi (==0.97.0)",
    "httpx (==0.24.1)",
    "pymysql (==1.1.1)",
    "pytest (==7.4.0)",
    "pytest-mock (==3.11.1)",
    "python-jose (==3.4.0)",
    "redis (==5.2.1)",
    "sqlalchemy (==2.0.38)",
    "uvicorn (==0.34.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
